[package]
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
name = "allenap-shell-utils"
description = "allenap's shell utilities"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "allenap-shell-utils"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5", features = ["default", "derive", "cargo", "env"] }
dirs = "^6.0.0"
notify = "^8.0.0"
