[package]
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
name = "allenap-shell-utils"
description = "allenap's shell utilities"
version = "0.2.0"
edition = "2024"

[[bin]]
doc = false
name = "allenap-shell-utils"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["default", "derive", "cargo", "env"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
notify = { version = "8.2.0", features = ["serde"] }
serde_json = "1.0.143"
